--- a/website/src/pages/try-it.module.css
+++ b/website/src/pages/try-it.module.css
@@ -1,8 +1,11 @@
 .layout {
   display: grid;
   grid-template:
-    "editor result" 600px
-    "editor code" 300px;
+    "topbar topbar" min-content
+    "editor result" min-content
+    "editor code" 40% / 1fr 1fr;
+  max-width: 100vw;
+  gap: 1rem;
   padding: 1em;
 }
 
@@ -11,8 +14,7 @@
   font-size: 0.75rem;
 }
 .code pre {
-  overflow-y: auto;
-  max-height: calc(100% - 4em);
+  overflow: auto;
 }
 
 .result {
@@ -21,11 +23,29 @@
 
 .editor {
   grid-area: editor;
+  max-width: 45vw;
+}
+.topbar {
+  grid-area: topbar;
 }
 
 .output {
   background-color: black;
   color: white;
-  overflow-y: auto;
-  max-height: 80%;
+  overflow: auto;
+  max-height: 60vh;
+  max-width: 45vw;
+}
+
+.compiled {
+  overflow: auto;
+  font-size: 0.75rem;
+  max-height: 60vh;
+  max-width: 45vw;
+}
+
+.toolbar {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
 }
