use css module in Example

--- a/website/src/components/Example/styles.module.css
+++ b/website/src/components/Example/styles.module.css
@@ -1,3 +1,9 @@
-.smallButton {
-    padding: 0.1rem 0.4rem
+.inlineButton {
+  padding: 0.1rem 0.4rem;
+}
+
+.blockButton {
+  position: absolute;
+  bottom: 0;
+  right: 0;
 }
