--- a/website/src/components/Example/styles.module.css
+++ b/website/src/components/Example/styles.module.css
@@ -1,3 +1,7 @@
+.example {
+    position: relative;
+}
+
 .inlineButton {
   padding: 0.1rem 0.4rem;
 }
@@ -6,4 +10,9 @@
   position: absolute;
   bottom: 0;
   right: 0;
+}
+
+[data-theme='dark'] .example button {
+    background:var(--ifm-color-content);
+    color:black;
 }
