Use subtle-color variable from ui-components

--- a/website/src/components/Example/styles.module.css
+++ b/website/src/components/Example/styles.module.css
@@ -13,6 +13,6 @@
 }
 
 [data-theme='dark'] .example button {
-    background:var(--ifm-color-content);
+    background:var(--subtle-color);
     color:black;
 }
