--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -6,15 +6,18 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
+  --ifm-font-family-base: "Poppins", Montserrat, sans-serif;
+  --font-family: "Poppins", Montserrat, sans-serif;
+  --ifm-color-primary: #41c387;
+  --ifm-color-primary-dark: #41c387;
   --ifm-color-primary-darker: #277148;
   --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary-light: #41c387;
+  --ifm-color-primary-lighter: #50d296;
+  --ifm-color-primary-lightest: #50d296;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  --ifm-footer-background-color: #18242b;
 
   /* Custom variables */
   --font-color: var(--font-color-1);
@@ -22,11 +25,11 @@
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme="dark"] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
+  --ifm-color-primary: #50d296;
+  --ifm-color-primary-dark: #50d296;
+  --ifm-color-primary-darker: #41c387;
+  --ifm-color-primary-darkest: #41c387;
+  --ifm-color-primary-light: #50d296;
   --ifm-color-primary-lighter: #32d8b4;
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
