--- a/website/src/pages/probeer-het.module.css
+++ b/website/src/pages/probeer-het.module.css
@@ -5,7 +5,7 @@
     "editor" min-content
     "topbar2" min-content
     "result" min-content
-    "code" 1fr / 1fr;
+    "code" min-content / 1fr;
   max-width: 100vw;
   gap: 1rem;
   padding: 1em;
