--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -8,7 +8,7 @@
 :root {
   --ifm-font-family-base: "Poppins", Montserrat, sans-serif;
   --font-family: "Poppins", Montserrat, sans-serif;
-  --ifm-color-primary: #41c387;
+  --ifm-color-primary: #55cd96;
   --ifm-color-primary-dark: #41c387;
   --ifm-color-primary-darker: #277148;
   --ifm-color-primary-darkest: #205d3b;
@@ -18,6 +18,8 @@
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
   --ifm-footer-background-color: #18242b;
+  --ifm-color-success: #205d3b;
+  --ifm-color-success-dark: #18242b;
 
   /* Custom variables */
   --font-color: var(--font-color-1);
@@ -25,7 +27,7 @@
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme="dark"] {
-  --ifm-color-primary: #50d296;
+  --ifm-color-primary: #55cd96;
   --ifm-color-primary-dark: #50d296;
   --ifm-color-primary-darker: #41c387;
   --ifm-color-primary-darkest: #41c387;
@@ -33,6 +35,8 @@
   --ifm-color-primary-lighter: #32d8b4;
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+  --ifm-color-success: #91e6c8;
+  --ifm-color-success-dark: #eeeeee;
 
   /* Custom variables */
   --font-color: var(--subtle-color);
